--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -2,10 +2,22 @@
 @use '/src/sass/base/mixins.scss' as *;
 
 .intro {
+    position: relative;
     &__container {
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: 34px;
+        //нижний Padding для картинки грузовика чтоб поместилось
+        padding-bottom: 14px;
     }
-
-    &__day {
+    //В любое время дня и ночи
+    &__day-wrapper {
+        margin-right: 34px;
+        flex-basis: 201px;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 7px 8px;
     }
 
     &__day-icon-moon {
@@ -18,9 +30,18 @@
     }
 
     &__day-text {
+        flex-basis: 100%;
+        color: #f1f1f1;
+        font-family: 'Open Sans';
+        font-weight: 300;
     }
-
-    &__weather {
+    //Вне зависимости от погодных условий
+    &__weather-wrapper {
+        flex-basis: 293px;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 7px 8px;
     }
 
     &__weather-icon-cloud {
@@ -33,36 +54,59 @@
     }
 
     &__weather-text {
+        flex-basis: 100%;
+        color: #f1f1f1;
+        font-family: 'Open Sans';
+        font-weight: 300;
     }
-
+    //Доставим газ за 4 часа
     &__delivery-time {
+        margin-top: 12px;
+        flex-basis: 460px;
+        color: #2194ff;
+        font-size: 64px;
+        font-weight: 400;
+        line-height: 63px;
     }
-
+    //в любую точку  Москвы
     &__delivery-area {
+        margin-top: 14px;
+        flex-basis: 307px;
+        color: #f1f1f1;
+        font-size: 24px;
     }
 
     &__button {
-        width: 395px;
+        margin-top: 40px;
+        flex: 0 1 395px;
         height: 87px;
-        flex-shrink: 0;
         border-radius: 11px;
-        box-shadow: inset 0 4px 12px rgba(0, 0, 0, 0.45);
-        border: 4px solid $primary;
-        background: url('/src/img/intro/button-top.svg') top 9px right 3px / 377px 44px no-repeat,
-            url('/src/img/intro/button-bottom.svg') bottom 9px right / 374px 26px no-repeat,
-            $primary;
-
+        border: none;
+        padding: 9px;
+        background: url('/src/img/intro/intro__button_whole.png') center / 100% 100% no-repeat;
+        cursor: pointer;
+        //text buttons style
         color: $light;
         text-align: center;
         text-shadow: 1px 2px 0 rgba($dark, 0.25);
         font-size: 22px;
     }
-
+    //Доставка газа всегда по актуальным ценам
     &__price-info {
+        margin-top: 13px;
+        margin-left: 19px;
+        flex-basis: 100%;
+        color: #f1f1f1;
+        font-size: 24px;
     }
-
+    //truck image on the right
     &__image-truck {
+        display: none;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 1037px;
+        height: 477px;
+        flex-shrink: 0;
     }
-}
-.container {
 }
