--- a/src/sass/base/basic.scss
+++ b/src/sass/base/basic.scss
@@ -50,6 +50,11 @@ body {
     font-weight: 400;
 }
 
+//мои стили
+button {
+    border: none;
+}
+
 //общие классы
 .container {
     max-width: 1140px;
