advantage before adaptive

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,4 +11,5 @@
 //blocks
 @use '/src/sass/blocks/intro.scss';
 @use '/src/sass/blocks/pricing.scss';
+@use '/src/sass/blocks/advantage.scss';
 //fonts
