--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -4,6 +4,7 @@
 .intro {
     max-width: 1920px;
     width: 100%;
+    margin: 0 auto;
     position: relative;
     overflow: hidden;
     &__container {
