--- a/src/sass/ui/header.scss
+++ b/src/sass/ui/header.scss
@@ -4,6 +4,7 @@
 .header {
     max-width: 1920px;
     width: 100%;
+    margin: 0 auto;
     // .header__container
     &__container {
         display: flex;
