--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -12,4 +12,5 @@
 @use '/src/sass/blocks/intro.scss';
 @use '/src/sass/blocks/pricing.scss';
 @use '/src/sass/blocks/advantage.scss';
+@use '/src/sass/blocks/delivery.scss';
 //fonts
