--- a/src/sass/blocks/delivery.scss
+++ b/src/sass/blocks/delivery.scss
@@ -8,6 +8,7 @@
     margin: 0 auto;
     padding-top: 34px;
     padding-bottom: 114px;
+    background-color: rgba($primary, 0.05);
     // .delivery__container
     &__container {
     }
