--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -13,4 +13,5 @@
 @use '/src/sass/blocks/pricing.scss';
 @use '/src/sass/blocks/advantage.scss';
 @use '/src/sass/blocks/delivery.scss';
+@use '/src/sass/blocks/feedback.scss';
 //fonts
