--- a/src/sass/blocks/feedback.scss
+++ b/src/sass/blocks/feedback.scss
@@ -10,6 +10,35 @@
     // .feedback__container
     &__container {
         margin-top: 47px;
+        position: relative;
+        &::after {
+            content: '';
+            max-width: 799px;
+            width: 100%;
+            height: 286px;
+            border-radius: 40px;
+            background-color: $light;
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        &::before {
+            content: '';
+            max-width: 839px;
+            width: 100%;
+            height: 252px;
+            border-radius: 40px;
+            background-color: $light;
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
     // .feedback__title
     &__title {
