--- a/src/sass/blocks/feedback.scss
+++ b/src/sass/blocks/feedback.scss
@@ -11,6 +11,23 @@
     &__container {
         margin-top: 47px;
         position: relative;
+        //animate active class
+        &--animate-1 {
+            &::after {
+                animation: animateSwiper-1 0.3s linear forwards;
+            }
+            &::before {
+                animation: animateSwiper-2 0.3s linear forwards;
+            }
+        }
+        &--animate-2 {
+            &::after {
+                animation: animateSwiper-2 0.3s linear forwards;
+            }
+            &::before {
+                animation: animateSwiper-3 0.3s linear forwards;
+            }
+        }
         &::after {
             content: '';
             max-width: 799px;
@@ -146,5 +163,42 @@
         .swiper-pagination-bullet-active {
             background-color: $primary;
         }
+    }
+}
+
+@keyframes animateSwiper-1 {
+    from {
+        max-width: 799px;
+        width: 100%;
+        height: 286px;
+    }
+    to {
+        max-width: 759px;
+        width: 100%;
+        height: 320px;
+    }
+}
+@keyframes animateSwiper-2 {
+    from {
+        max-width: 839px;
+        width: 100%;
+        height: 252px;
+    }
+    to {
+        max-width: 799px;
+        width: 100%;
+        height: 286px;
+    }
+}
+@keyframes animateSwiper-3 {
+    from {
+        max-width: 759px;
+        width: 100%;
+        height: 320px;
+    }
+    to {
+        max-width: 839px;
+        width: 100%;
+        height: 252px;
     }
 }
