--- a/src/sass/blocks/feedback.scss
+++ b/src/sass/blocks/feedback.scss
@@ -200,7 +200,8 @@
         }
         &__animation-slide-1,
         &__animation-slide-2,
-        &__animation-slide-3 {
+        &__animation-slide-3,
+        &__animation-slide-4 {
             display: none;
         }
         &__button {
