--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -14,4 +14,5 @@
 @use '/src/sass/blocks/advantage.scss';
 @use '/src/sass/blocks/delivery.scss';
 @use '/src/sass/blocks/feedback.scss';
+@use '/src/sass/blocks/faq.scss';
 //fonts
