--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -15,4 +15,5 @@
 @use '/src/sass/blocks/delivery.scss';
 @use '/src/sass/blocks/feedback.scss';
 @use '/src/sass/blocks/faq.scss';
+@use '/src/sass/blocks/question.scss';
 //fonts
