--- a/src/sass/blocks/question.scss
+++ b/src/sass/blocks/question.scss
@@ -43,7 +43,6 @@
         color: rgba($dark, 0.5);
         font-family: 'Open Sans';
         font-size: 12px;
-        text-transform: uppercase;
         &::placeholder {
             color: rgba($dark, 0.5);
             font-family: 'Open Sans';
@@ -76,7 +75,6 @@
         color: rgba($dark, 0.5);
         font-family: 'Open Sans';
         font-size: 12px;
-        text-transform: uppercase;
         &::placeholder {
             color: rgba($dark, 0.5);
             font-family: 'Open Sans';
@@ -97,6 +95,11 @@
         font-family: 'Open Sans';
         font-size: 18px;
         font-weight: 700;
+        &:focus,
+        &:hover,
+        &:active {
+            opacity: 0.9;
+        }
     }
     // .question__specialist
     &__specialist {
@@ -174,6 +177,11 @@
         height: 87px;
         margin-top: 11px;
         grid-column: 1 / 3;
+        &:focus,
+        &:hover,
+        &:active {
+            opacity: 0.9;
+        }
     }
 }
 
