--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -10,6 +10,7 @@ $primarylight: #81c0fb;
 $accent: #ff6421;
 $accentdark: #bf9d17;
 $accentlight: #ff283d;
+$navydark: #1b2639;
 
 $yellow: #ffe600;
 $yellowdark: #ecc91a;
