--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -16,4 +16,5 @@
 @use '/src/sass/blocks/feedback.scss';
 @use '/src/sass/blocks/faq.scss';
 @use '/src/sass/blocks/question.scss';
+@use '/src/sass/blocks/footer.scss';
 //fonts
