--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -5,6 +5,7 @@
     max-width: 1920px;
     width: 100%;
     margin: 0 auto;
+    padding-bottom: 68px;
     // .footer__container
     &__container {
         display: grid;
@@ -13,9 +14,9 @@
     //.footer__wrapper
     &__wrapper {
         grid-column: 1 / 3;
-        height: 488px;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: minmax(0px, 570px) minmax(0px, 570px);
+        grid-template-rows: 488px auto;
         border-radius: 33px;
         overflow: hidden;
         background: $light;
@@ -104,6 +105,36 @@
             margin-left: unset;
             margin-right: 32px;
             justify-self: end;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        &__wrapper {
+            grid-column: 1 / 3;
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: 488px 488px;
+            border-radius: 33px;
+            overflow: hidden;
+            background: $light;
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
+        }
+        &__link {
+            margin-top: 20px;
+            margin-left: 10px;
+            color: $light;
+            font-family: 'Open Sans';
+            font-size: 14px;
+            text-decoration-line: underline;
+            text-decoration-skip-ink: none;
+            &--right {
+                margin-left: unset;
+                margin-right: 10px;
+                justify-self: end;
+                text-align: end;
+            }
         }
     }
 }
