--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -17,4 +17,5 @@
 @use '/src/sass/blocks/faq.scss';
 @use '/src/sass/blocks/question.scss';
 @use '/src/sass/blocks/footer.scss';
+@use '/src/sass/blocks/modal.scss';
 //fonts
