--- a/src/sass/blocks/modal.scss
+++ b/src/sass/blocks/modal.scss
@@ -15,7 +15,7 @@
 
         max-width: 462px;
         width: 100%;
-        height: 408px;
+        // height: 408px;
 
         padding: 30px 30px 39px 30px;
         border-radius: 33px;
