--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -18,4 +18,5 @@
 @use '/src/sass/blocks/question.scss';
 @use '/src/sass/blocks/footer.scss';
 @use '/src/sass/blocks/modal.scss';
+@use '/src/sass/blocks/confirmation.scss';
 //fonts
